changes in env.example

--- a/.env.examaple
+++ b/.env.examaple
@@ -33,7 +33,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=ae2d9a738ceab0
 MAIL_PASSWORD=73ebbdddcdbb5d
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS='adnan.contrive@gmail.com'
+MAIL_FROM_ADDRESS='admin@gmail.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
