--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "spatie/laravel-fractal": "^5.8",
         "spatie/laravel-permission": "^5.1",
+        "spatie/laravel-query-builder": "^3.6",
         "zircote/swagger-php": "^3.2"
     },
     "require-dev": {
